--- a/server/client/css/lib/bootstrap.css
+++ b/server/client/css/lib/bootstrap.css
@@ -1317,22 +1317,22 @@ mark,
   text-align: right;
 }
 .text-center {
-  text-align: center;
+  text-align: center !important;
 }
 .text-justify {
-  text-align: justify;
+  text-align: justify !important;
 }
 .text-nowrap {
   white-space: nowrap;
 }
 .text-lowercase {
-  text-transform: lowercase;
+  text-transform: lowercase !important;
 }
 .text-uppercase {
-  text-transform: uppercase;
+  text-transform: uppercase !important;
 }
 .text-capitalize {
-  text-transform: capitalize;
+  text-transform: capitalize !important;
 }
 .text-muted {
   color: #777;
