--- a/server/client/css/lib/custom.css
+++ b/server/client/css/lib/custom.css
@@ -68,3 +68,85 @@ footer{
     padding: 10px;
     text-align: center;
 }
+
+.auth_page{
+    min-height: 600px;
+    position: relative;
+    z-index: 99;
+    padding: 50px 0px;
+    background-image: linear-gradient(-180deg, #0550E9 0%, #C008E3 100%);
+    background-repeat: no-repeat;
+    background-size: 100% !important;
+}
+
+.auth_list{
+    margin:10% auto;
+    text-align: center;
+    position: relative;
+    display: block;
+}
+
+.auth_list ul{
+    list-style: none;
+    display: block;
+}
+
+.auth_list ul li{
+    padding:10px 0px;
+    color:#fff;
+    font-size: 22px;
+    letter-spacing: 2px;
+}
+
+.auth_list ul li span{
+    padding-left: 10px;
+}
+
+.auth_list ul li span i{
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    line-height: 27px;
+    background: #07e827;
+    font-size: 18px;
+}
+
+.btn-green{
+    background: #07e827 !important;
+    color:#fff !important;
+}
+.btn-white{
+    background: #fbfbfb !important;
+    color: #222 !important;
+}
+
+.auth_btns .btn{
+        display: table;
+    margin: 10px auto;
+    width: auto;
+    padding: 10px 25px;
+}
+
+.auth_btns .btn span{
+    padding-left: 15px;
+}
+
+.dash_page{
+    min-height: 650px;
+    position: relative;
+    z-index: 99;
+    padding: 50px 0px;
+    background-image: linear-gradient(-180deg, #0550E9 0%, #C008E3 100%);
+    background-repeat: no-repeat;
+    background-size: 100% !important;
+}
+
+.dash_page .in_block{
+    background: #fbfbfb;
+    height: 650px;
+    max-height: 650px;
+    min-height: 650px;
+    padding: 10px;
+    margin: 20px 0px;
+}
