--- a/server/client/css/lib/custom.css
+++ b/server/client/css/lib/custom.css
@@ -140,6 +140,7 @@ footer{
     background-image: linear-gradient(-180deg, #0550E9 0%, #C008E3 100%);
     background-repeat: no-repeat;
     background-size: 100% !important;
+    margin:20px 0px;
 }
 
 .dash_page .in_block{
