--- a/server/client/css/lib/custom.css
+++ b/server/client/css/lib/custom.css
@@ -140,7 +140,14 @@ footer{
     background-image: linear-gradient(-180deg, #0550E9 0%, #C008E3 100%);
     background-repeat: no-repeat;
     background-size: 100% !important;
-    margin:20px 0px;
+    margin:0px 0px;
+}
+.dash_title{
+    text-align: left;
+    font-weight: 100;
+    text-transform: capitalize;
+    padding-top: 0px;
+    margin-top: 0px;
 }
 
 .dash_page .in_block{
@@ -150,4 +157,24 @@ footer{
     min-height: 650px;
     padding: 10px;
     margin: 20px 0px;
+}
+.beam_box{
+    margin:20px 0px;
+}
+
+.suggest_list{
+    padding: 0px;
+    overflow: auto;
+    overflow-x: hidden;
+    background: #fbfbfb;
+    margin-top: 20px;
+    height: 150px;
+}
+
+.suggested_users{
+    padding: 10px 10px;
+    background: #fafafa;
+    margin-bottom: 2px;
+    border-bottom: 1px solid #eee;
+}
 }
